--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1087,3 +1087,46 @@
 .reject-button:hover {
     background-color: #c82333;
 }
+
+/* dropdown start */
+
+
+.custom-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+#customInput {
+    padding: 10px;
+    font-size: 16px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    max-height: 150px;
+    overflow-y: auto;
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.dropdown-option {
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    
+}
+.dropdown-content .dropdown-option:hover {
+    background-color: #ddd;
+}
+
+.dropdown-option:hover {
+    background-color: #f0f0f0;
+}
