--- a/templates/admin/role_assignment.html
+++ b/templates/admin/role_assignment.html
@@ -26,8 +26,11 @@ Role Assignment
                 {{ form.person.label(class_='input-label') }} <br></div>
                 
                 <div class="form-box">
-                {{form.person(class_="input")}}
-                <br></div>
+                    {{ form.person(class_="input", id="customInput", autocomplete="off") }} <br>
+                </div>
+                <div class="dropdown-content" id="dropdownContent">
+                    <!-- Options will be dynamically added here -->
+                </div>
 
                 <div class="form-label">
                 {{ form.role.label(class_='input-label') }} <br>
@@ -44,5 +47,50 @@ Role Assignment
         </div>
     </div>
 </body>
+
+<script>
+    // Get the list of people from the Django template
+    var people = [
+        {% for person in people %}
+        ['{{ person.name }}', '{{ person.employee_id }}'],
+        {% endfor %}
+    ];
+
+    var input = document.getElementById('customInput');
+    var dropdownContent = document.getElementById('dropdownContent');
+
+    input.addEventListener('input', function () {
+        // Clear previous options
+        dropdownContent.innerHTML = '';
+
+        // Filter people based on user input
+        var inputValue = input.value.toLowerCase();
+        var filteredPeople = people.filter(function (person) {
+            return person[0].toLowerCase().includes(inputValue);
+        });
+
+        // Add filtered options to the dropdown
+        filteredPeople.forEach(function (person) {
+            var option = document.createElement('div');
+            option.className = 'dropdown-option';
+            option.textContent = person.join(' - ');
+            option.addEventListener('click', function () {
+                input.value = person[0];
+                dropdownContent.style.display = 'none';
+            });
+            dropdownContent.appendChild(option);
+        });
+
+        // Display the dropdown if there are matching options
+        dropdownContent.style.display = filteredPeople.length > 0 ? 'block' : 'none';
+    });
+
+    // Hide the dropdown when clicking outside of it
+    document.addEventListener('click', function (event) {
+        if (!event.target.matches('.custom-dropdown')) {
+            dropdownContent.style.display = 'none';
+        }
+    });
+</script>
 
 {%endblock%}
