--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -100,7 +100,7 @@
 
             <div class="head-title">
                 <div class='left'>
-                <span>Employee-id: {{person.employee_id}}</span>
+                <span>Employee-ID: {{person.employee_id}}</span>
                 <h1>Welcome, {{ person.name }}!</h1>
                 </div>
                 <div class="right">
