--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -104,7 +104,7 @@
                 <h1>Welcome, {{ person.name }}!</h1>
                 </div>
                 <div class="right">
-                    <form action="{{ url_for('search') }}" method="POST" class="search-form">
+                    <form action="{{ url_for('admin_search') }}" method="GET" class="search-form">
                         <input type="text" name="ref_no" id="search" placeholder="Search by Ref_No">
                         <button type="submit" class="search-btn">Search</button>
                     </form>
